--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,12 +3,12 @@
     <ion-title>
       Ionic Blank
     </ion-title>
+    <button ion-button menuToggle >
+      <ion-icon name = "menu"></ion-icon>
+    </button>
   </ion-navbar>
 </ion-header>
+<ion-content>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
 </ion-content>
+
